--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,9 +6,9 @@
 
 {% block bodyMain %}
 <div class="row justify-content-center">
-    <div class="col-12 col-sm-11 col-xl-10">
-        <div class="row m-2 mt-5">
-            <div class="col-11">
+    <div class="col-sm-8 col-lg-6 col-xl-4">
+        <div class="row mt-5">
+            <div class="col">
                 <form action="{% url 'checkout' %}" method="post" id="payment-form">
                     {% csrf_token %}
                     <fieldset>
