--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -2,24 +2,21 @@
 {% load static %}
 
 {% block bodyMain %}
-<div class="container">
-    <div class="row">
-        <div class="col text-center">
-            <h5 class="m-3">
-                Want to tell us something other than a 
-                <a href="{% url 'view_suggestions' %}">plant suggestion?</a>
-            </h5>
-            <h6>
-                Fill in the form below and we'll be in touch asap.
-            </h6>
-            <form action="{% url 'contact' %}" method="post" 
-                class="col-sm-10 col-lg-8 col-xl-6 m-auto">
-                {% csrf_token %}
-                {{ contact_form | crispy }}
-                <button type="submit" class="btn btn-success m-3">Submit</button>
-            </form>
-        </div>
+<div class="row">
+    <div class="col text-center">
+        <h5 class="mt-3 mb-3">
+            Want to tell us something other than a
+            <a href="{% url 'view_suggestions' %}">plant suggestion?</a>
+        </h5>
+        <h6>
+            Fill in the form below and we'll be in touch asap.
+        </h6>
+        <form action="{% url 'contact' %}" method="post" class="col-sm-10 col-lg-8 col-xl-6 m-auto">
+            {% csrf_token %}
+            {{ contact_form | crispy }}
+            <button type="submit" class="btn btn-success m-3">Submit</button>
+        </form>
     </div>
-</div>    
+</div>
 
 {% endblock %}
