--- a/plants/templates/plants/all_plants.html
+++ b/plants/templates/plants/all_plants.html
@@ -9,10 +9,10 @@
 {% block bodyMain %}
 
 <div class="row mt-4 justify-content-center">
-    <div class="col-10">
+    <div class="col col-sm-11">
         <div class="row">
             <!-- Search -->
-            <div class="col-3">
+            <div class="col col-sm-3">
                 <form method="GET" action="{% url 'all_plants' %}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="query"
