--- a/shoppingcart/templates/shoppingcart/view_cart.html
+++ b/shoppingcart/templates/shoppingcart/view_cart.html
@@ -35,33 +35,38 @@
 </script>
 
 <div class="row justify-content-center">
-    <form method="post" action="{% url 'update_cart' %}" class="col-12 col-sm-11 col-xl-10 shoppingcart">
+    <form method="post" action="{% url 'update_cart' %}" class="col col-sm-11 col-xl-10 shoppingcart">
         {% csrf_token %}
-        <div class="row m-2 mt-5">
-            <div class="col-11">
+        <div class="row mt-5">
+            <div class="col">
                 <h5>
                     Shoppingcart contents:
                 </h5>
             </div>
         </div>
         {% for plant in cart_items %}
-        <div class="row m-2">
-            <div class="col-2 text-center">
+        <div class="row">
+            <!-- Plant image -->
+            <div class="col-3 text-center">
                 {% if plant.image_url %}
-                <img class="img-cart mt-1 mb-3 ms-2" src="{{ plant.image_url }}" alt="Image of {{ plant.common_name }}" />
+                <img class="img-cart mt-1 mb-3 ms-2" src="{{ plant.image_url }}"
+                    alt="Image of {{ plant.common_name }}" />
                 {% else %}
                 <img class="img-cart mt-1 mb-3 ms-2" src="{{ MEDIA_URL }}noimage.png" alt="No image uploaded" />
                 {% endif %}
             </div>
+            <!-- Plant common name -->
             <div class="col-3 mt-2">
                 <a href="{% url 'single_plant' plant.id %}">
                     {{plant.common_name}}
                 </a>
             </div>
-            <div class="col-2 mt-2">
-                Price: € <span id="price_{{plant.id}}">{{plant.price}}</span>
+            <!-- Price -->
+            <div class="col-1 mt-2">
+                Price: <br>€ <span id="price_{{plant.id}}">{{plant.price}}</span>
             </div>
-            <div class="col-2 mt-2 text-center">
+            <!-- Amount -->
+            <div class="col-3 mt-2 text-center">
                 <div>Amount:</div>
                 <div class="input-group m-1 justify-content-center">
                     <a class="btn btn-black decrement-quantity input-group-prepend">
@@ -86,23 +91,26 @@
                     </a>
                 </div>
             </div>
-            <div class="col-2 mt-2">
-                Line total: € <span class="line-total" id="line-total_{{plant.id}}">00,00</span>
+            <!-- Line total -->
+            <div class="col-2 mt-2 text-end">
+                Line total: <br>€ <span class="line-total" id="line-total_{{plant.id}}">00,00</span>
             </div>
         </div>
         <script>set_line_total('{{plant.id}}', '{{plant.amount}}');</script>
         {% endfor %}
 
-        <div class="row m-2">
-            <div class="col-9 mt-2"></div>
-            <div class="col-2 mt-2">
-                Subtotal: € <span id="subtotal">00,00</span>
-                <script>set_subtotal();</script>
+        <!-- Subtotal -->
+        <div class="row subtotal-row">
+            <div class="col mt-2 text-end subtotal-col">
+                <div>
+                    Subtotal: <br>€ <span id="subtotal">00,00</span>
+                    <script>set_subtotal();</script>
+                </div>
             </div>
         </div>
-        <div class="row m-2">
-            <div class="col-9 mt-2"></div>
-            <div class="col-2 mt-2 checkout">
+        <!-- Checkout button -->
+        <div class="row justify-content-end">
+            <div class="col mt-2 checkout text-end">
                 <button type="submit" class="btn btn-success">
                     Checkout
                 </button>
