--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,12 @@
             {% endif %}
         </header>
 
-
-        {% block bodyMain %}
-        {% endblock %}
+        <div class="row justify-content-center">
+            <div class="col-sm-11">
+                {% block bodyMain %}
+                {% endblock %}
+            </div>
+        </div>
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
