--- a/suggestions/templates/suggestions/add_suggestion.html
+++ b/suggestions/templates/suggestions/add_suggestion.html
@@ -10,7 +10,7 @@
                 class="col-sm-10 col-lg-8 col-xl-6 m-auto">
                 {% csrf_token %}
                 {{ suggestion_form | crispy }}
-                <button type="submit" class="m-3">Submit</button>
+                <button type="submit" class="m-3  btn btn-success">Submit</button>
             </form>
         </div>
     </div>
