--- a/suggestions/static/suggestions/css/suggestions.css
+++ b/suggestions/static/suggestions/css/suggestions.css
@@ -1,5 +1,15 @@
 .suggestions-row{
     max-width: 100%;
     margin: 0px;
+    padding-bottom: 2px;
     word-wrap: break-word;
+    border-bottom: 1px solid grey;
+}
+
+.suggestions:first-child{
+    border-top: 1px solid grey;;
+}
+
+a{
+    text-decoration: none;
 }
