--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,8 @@
                             {% endif %}
                         </ul>
                         <a href="{% url 'view_cart' %}" class="btn btn-outline-dark">
-                            <i class="bi-cart-fill me-1"></i>
+                            <!-- <i class="bi-cart-fill me-1"></i> -->
+                            <i class="fa-solid fa-cart-shopping"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">{{plant_count}}</span>
                         </a>
